@@ -2,6 +2,7 @@
 
     * Fixed a bug with the debug option in logging
     * Added a command line option to enable printing debug to the command line.
+    * Fixed a bug in setModel() in XMLDocument
 
 03/13/2005  Ian Lewis <IanLewis@member.fsf.org>
 
